v 0.5

- Do not refresh screen as fast as possible, and free cpu instead.
- Added Resident Evil 2, PS1, Demo, Pal.
- Added Resident Evil 3, PC, Game.
- Load room description to know how many cameras there are.

v 0.4

- Added Resident Evil 2, PS1, Game.
- Added Resident Evil 2, PC, Game.
- Preliminary movie player using ffmpeg library.

v 0.3

- Don't reload image if switching between fullscreen and windowed.

v 0.2

- Replaced all filesystems access by Physfs library, also used to access
  Resident Evil 3 rofs<n>.dat archives.

v 0.1

- First release